--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
+.banner{
+    object-fit: cover;
+    height: 250px;
+}
